--- a/frontend-nextjs/tsconfig.json
+++ b/frontend-nextjs/tsconfig.json
@@ -17,6 +17,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/index.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/index.jsx", "src/pages/_app.jsx", "src/pages/_document.jsx"],
   "exclude": ["node_modules"]
 }
